Remove some unnecessary statements (#2190)
* remove some unnecessary statements
* simplify lambdas